--- a/backend/foodgram/requirements.txt
+++ b/backend/foodgram/requirements.txt
@@ -4,7 +4,7 @@ pytz==2022.2.1
 sqlparse==0.4.2
 typing-extensions==4.3.0
 isort==5.10.1
-psycopg2==2.9.3
+psycopg2-binary==2.9.3
 python-dotenv==0.20.0
 Pillow==9.2.0
 django-cors-headers==3.13.0
@@ -15,3 +15,4 @@ django-filter==22.1
 drf-extra-fields==3.4.0
 reportlab==3.6.11
 flake8==5.0.4
+gunicorn==20.0.4
