--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -1,5 +1,15 @@
 version: '3.3'
 services:
+  db:
+    image: postgres:13.0-alpine
+    volumes:
+      - postgres_data:/var/lib/postgresql/data/
+    environment:
+      - POSTGRES_USER
+      - POSTGRES_PASSWORD
+      - DB_NAME
+    env_file:
+      - ./.env
 
   frontend:
     build:
@@ -7,11 +17,37 @@ services:
       dockerfile: Dockerfile
     volumes:
       - ../frontend/:/app/result_build/
+
+  web:
+    build: ../backend/foodgram/
+    restart: always
+    volumes:
+      - static_value:/mycode/static/
+      - media_value:/mycode/media/
+    ports:
+      - "8000:8000"
+    depends_on:
+      - db
+      - frontend
+    env_file:
+      - ./.env
+
   nginx:
     image: nginx:1.19.3
     ports:
       - "80:80"
     volumes:
+#      - static_value:/usr/share/nginx/html/static/
+      - media_value:/usr/share/nginx/html/media/
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
-      - ../frontend/build:/usr/share/nginx/html/
+      - ../frontend/build/:/usr/share/nginx/html/
       - ../docs/:/usr/share/nginx/html/api/docs/
+      - ../docs/redoc.html:/usr/share/nginx/html/api/docs/redoc.html
+    restart: always
+    depends_on:
+      - web
+      - frontend
+volumes:
+  postgres_data:
+  static_value:
+  media_value:
