--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,9 +1,30 @@
+
 server {
     listen 80;
+    server_name localhost, 127.0.0.1;
+
+    location /api/ {
+        proxy_set_header        Host $host;
+        proxy_set_header        X-Forwarded-Host $host;
+        proxy_set_header        X-Forwarded-Server $host;
+        proxy_pass http://web:8000;
+    }
+    location /admin/ {
+        proxy_pass http://web:8000/admin/;
+    }
+    location /static/ {
+        autoindex on;
+        root /usr/share/nginx/html/;
+    }
+    location /media/ {
+        autoindex on;
+        root /usr/share/nginx/html/;
+    }
     location /api/docs/ {
-        root /usr/share/nginx/html;
+        root /usr/share/nginx/html/;
         try_files $uri $uri/redoc.html;
     }
+
     location / {
         root /usr/share/nginx/html;
         index  index.html index.htm;
