--- a/.github/workflows/foodgram.yml
+++ b/.github/workflows/foodgram.yml
@@ -10,7 +10,7 @@ jobs:
       - name: setup python
       - uses: actions/setup-python@v2
         with:
-          pythin-version: 3.8
+          python-version: 3.8
       - name: install dependencies
         run: |
           python -m pip install --upgrade pip
