--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -37,7 +37,7 @@ services:
     ports:
       - "80:80"
     volumes:
-#      - static_value:/usr/share/nginx/html/static/
+      - static_value:/var/html/static/
       - media_value:/usr/share/nginx/html/media/
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
       - ../frontend/build/:/usr/share/nginx/html/
