--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -12,9 +12,11 @@ server {
     location /admin/ {
         proxy_pass http://web:8000/admin/;
     }
-    location /static/ {
-        autoindex on;
-        root /usr/share/nginx/html/;
+    location /static/admin/ {
+        root /var/html/;
+    }
+    location /static/rest_framework/ {
+        root /var/html/;
     }
     location /media/ {
         autoindex on;
