--- a/.github/workflows/foodgram.yml
+++ b/.github/workflows/foodgram.yml
@@ -6,16 +6,16 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - name: setup python
-      - uses: actions/setup-python@v2
-        with:
-          python-version: 3.8
-      - name: install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install flake8 pep8-naming flake8-broken-line flake8-return flake8-isort
-          pip install -r backend/foodgram/requirements.txt
-      - name: flake8 tests
-        run: |
-          python -m flake8
+    - uses: actions/checkout@v2
+    - name: setup python
+      uses: actions/setup-python@v2
+      with:
+        python-version: 3.8
+    - name: install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install flake8 pep8-naming flake8-broken-line flake8-return flake8-isort
+        pip install -r backend/foodgram/requirements.txt
+    - name: flake8 tests
+      run: |
+        python -m flake8
