--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,7 +1,8 @@
-
 server {
     listen 80;
-    server_name localhost, 127.0.0.1;
+    server_name 84.201.165.95, localhost, 127.0.0.1;
+    client_max_body_size 100M;
+
 
     location /api/ {
         proxy_set_header        Host $host;
