--- a/.github/workflows/foodgram.yml
+++ b/.github/workflows/foodgram.yml
@@ -19,3 +19,44 @@ jobs:
     - name: flake8 tests
       run: |
         python -m flake8
+
+  build_and_push_to_docker_hub:
+    name: push to dockerhub
+    runs-on: ubuntu-latest
+    needs: test
+    steps:
+      - name: Check out the repo
+        uses: actions/checkout@v2
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+      - name: Login to Docker
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: start push
+        uses: docker/build-push-action@v2
+        with:
+          push: true
+          context: ./backend/
+          tags: apaffka/foodback:latest
+
+  deploy:
+    name: deploy backend to the server
+    runs-on: ubuntu-latest
+    needs: build_and_push_to_docker_hub
+    steps:
+      - name: executing remote ssh commands to deploy
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USER }}
+          key: ${{ secrets.SSH_KEY }}
+          passphrase: ${{ secrets.PASSPHRASE }}
+          stack_file_name: docker-compose.yaml
+          script: |
+            sudo docker pull apaffka/foodback:latest
+            sudo docker-compose stop
+            sudo docker-compose rm backend
+            sudo docker stop $(sudo docker ps -a -q)
+            sudo docker-compose up -d
