--- a/.github/workflows/foodgram.yml
+++ b/.github/workflows/foodgram.yml
@@ -38,7 +38,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          context: ./backend/
+          context: ./backend/foodgram/
           tags: apaffka/foodback:latest
 
   deploy:
